alignment fixed

--- a/css/main.css
+++ b/css/main.css
@@ -149,20 +149,12 @@ form {
   margin-right: 10%;
   background-color: #d8dce4; }
 
-.form-button {
+.form-button, h3 {
   text-align: center; }
-
-h2 {
-  text-align: center;
-  padding-top: 30px; }
 
 .login-form {
   display: grid;
   align-items: center; }
-
-.checkout-form {
-  display: grid;
-  grid-template-rows: 5% 40% 45% 10%; }
 
 .check1,
 .check2,
@@ -171,12 +163,19 @@ h2 {
   padding: 30px; }
 
 .Billing_header {
-  border-bottom: 1px solid black; }
+  border-bottom: 1px solid black;
+  align-self: center; }
 
 .pay_now {
   border-top: 1px solid black; }
 
 @media screen and (min-width: 1024px) {
+  .checkout-form {
+    display: grid;
+    grid-template-rows: 5% 35% 40% 20%;
+    padding-top: 2%;
+    padding-bottom: 1%; }
+
   .form1 {
     display: grid;
     grid-template-columns: 50% 50%;
